# ROSE

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  ROSEE_IMPLEMENTATION_PLAN.md  index.html  mkdocs.yml  pyproject.toml  reqs_docs.txt  requirements.txt  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yml  deploy.yml  tests.yml
changelog/: index.html
diffusion_solver/entk/: make_csv.py  run_test.py  tester_arr.py  tests_by_dist.py  trainModel_100.py
docs/: index.md
docs/getting-started/: dry-run.md  faq.md  installation.md  introduction.md
docs/integrations/: clearml.md  mlflow.md
docs/styles/: custom.css.old
docs/user-guide/: acl-metrics.md  advanced-acl-workflow.md  advanced-rl-workflow.md  basic-acl-workflow.md  basic-rl-workflow.md  experience.md  parallel_acl_docs.md  parallel_learners_docs.md  target-resources.md  tracking.md  uq_based-acl-workflow.md
examples/: README.md  data_flow_learner.py  selection.py  serial_workflow.py
examples/active_learn/: highly_parallel_surrogates_on_hpc.ipynb  state_control.py
examples/advanced/: advanced-tutorial.ipynb  check_accuracy.py  run_me.py  run_me_async.py  simulation.py  submit.sh
examples/algo_selector/: active_1.py  check_mse.py  run_me.py  sim.py
examples/algorithm_selector/: algorithm-selector-tutorial.ipynb  run_me.py
examples/alphazero/: performance.py  train_go.py
examples/basic/: active.py  basic-tutorial.ipynb  check_mse.py  evaluate_model.py  run.py  run_acl.py  run_me.py  sim.py  train.py
examples/exalearn/: exalearn.ipynb  run_me.py  submit_rose.sh
examples/frontier_hackathon/: readme.md  run_me_frontier.py  run_me_local.py  run_me_service.py  service_task.py  submit-xgc.sh  xgc-base.py
examples/hpo/: 00-random.py  01-optuna.py  02-ray_tune.py  random_hpo.py  ray_tune_hpo.py
examples/parallel/: check_mse.py  run_me.py  run_me_per_learner_config.py  run_me_per_learner_per_iter_config.py  run_me_with_dynamic_config.py  sim.py  train.py
examples/pool_based_classification/: Untitled.ipynb  active_learn.py  check_metric.py  run_me.py  simulation.py  submit.sh  training.py
examples/reinforcement_learn/: check_reward.py  environment.py  merge.py  model.py  parallelexperience.ipynb  reinforcementlearning.ipynb  run_me.py  update.py
examples/rl/: check_reward.py  criterion.py  deep_q_network.py  environment.py  merge.py  merge_memory.py  parallelexperience.ipynb  reinforcementlearning.ipynb  run_me.py  update.py
examples/service/: README.md  debug_workflow.yaml  example_rose_plugin.py  run_service.py  service_real.yaml  service_test.yaml  verify_service.py
examples/tutorials/: 00-active-learning.ipynb  01-reinforcement-learning.ipynb  README.md  pyproject.toml
examples/uq_active_learn/: active_learn.py  check_accuracy.py  check_uq.py  cpu_sbatch.sh  models.py  predict.py  run_me.py  simulation.py  training.py
framework/workflow/: selection.py
getting-started/dry-run/: index.html
getting-started/faq/: index.html
getting-started/installation/: index.html
integrations/clearml/: index.html
integrations/mlflow/: index.html
rose/: __init__.py  data.py  engine.py  experience.py  learner.py  metrics.py  tracking.py
rose/al/: __init__.py  active_learner.py  selector.py
rose/hpo/: __init__.py  hyper_optimizer_learner.py  hyper_parameter_optimizer.py
rose/integrations/: clearml_tracker.py  mlflow_tracker.py
rose/rl/: __init__.py  experience.py  learner.py  reinforcement_learner.py
rose/service/: __init__.py  client.py  manager.py  models.py
rose/uq/: UQMetrics.py  __init__.py  uq_activeLearner.py  uq_active_learner.py  uq_learner.py  uq_metrics.py  uq_parallel_learner.py  uq_scorer.py
search/: search_index.json
src/al_func/: random_selection.py  sample_gaussian.py  top_k.py
src/framework/: active_learn_run.py  data.py  evaluator.py  rose.py  (+9 more)
styles/: custom.css
tutorials/: 00-active-learning.ipynb  01-reinforcement-learning.ipynb  03-highly-parallel-surrogates.ipynb  04-al-algorithm-selector.ipynb  README.md  pyproject.toml
(+211 files in other folders)
