[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rose-tutorials"
version = "0.1.0"
description = "ROSE tutorials environment"
requires-python = ">=3.10"

# --------------------
# Common dependencies (for all tutorials)
# --------------------
dependencies = [
    "numpy",
    "rose @ git+https://github.com/radical-cybertools/rose.git@main",
]

# --------------------
# Optional dependencies for tutorials
# --------------------
[project.optional-dependencies]
00al = [
    "scikit-learn",
    "scipy",
]

01rl = [
    "torch",
    "gymnasium",
]

03hp = [
    "scikit-learn",
    "scipy",
]

04als = [
    "pandas",
    "matplotlib",
]
